src/styles/pages/leistungen/Leistungen.scss
@import "../../variables.scss";
.leistungen-main-container {
  max-width: 100vw;
  height: 100vh;

  scroll-behavior: smooth;
  overflow: overlay;
  scroll-snap-type: y mandatory;
  .first-container {
    scroll-snap-align: end;
    margin-top: 90px;
    width: 100%;
    height: calc(100% - 90px);
    background-color: #fff;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
  }
  .secound-container {
    overflow: hidden;
    width: 100%;
    height: calc(100vh - 90px);
    // margin-top: 90px;
    color: white;
    scroll-snap-align: end;
    display: flex;

    .secound-left-container {
      width: 50%;
      height: 100%;
      background-image: url(../../../../public/imgs/hero3.webp);
      background-size: cover;
      background-position: right;
      //   filter: blur(1.5px);
      transition: all 0.5s ease;
      //   outline: calc(50vw / 2) solid #0009;
      //   outline-offset: calc(50vw / -2);
      &:hover {
        // outline: 0vw solid #1f5ca2;
        // outline-offset: 0vw;
        background-position: left;

        transform: scale(1.1);
      }
    }
    .secound-right-container {
      width: 50%;
      height: 100%;
      background-color: #1f5ca2;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      .adults-title-container {
        width: 100%;
        height: 30%;
        .adults-title {
          font-size: 38px;
          font-weight: 900;
          font-family: "Merri";
          letter-spacing: 2px;
        }
      }
      .adults-btn-container {
        width: 75%;
        height: 15%;
        .adults-btn {
          text-decoration: none;
          color: $dark-blue;
          font-size: $large;
          border: 1px solid white;
          border-radius: 8px;
          padding: 16px 26px;
          background-color: #fff;
          &:hover {
            background-color: $light-blue;
            color: $white;
            border-color: $light-blue;
          }
        }
      }
    }
  }
  .third-container {
    width: 100%;
    height: calc(100vh - 90px);
    // margin-top: 90px;
    color: white;
    scroll-snap-align: end;
    display: flex;
    overflow: hidden;

    .third-left-container {
      width: 50%;
      height: 100%;
      background-color: $light-blue;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      .kids-title-container {
        width: 100%;
        height: 30%;
        .kids-title {
          font-size: 42px;
          // height: 25%;
          font-weight: 900;
          font-family: "Merri";
          letter-spacing: 2px;
        }
      }
      .kids-btn-container {
        width: 75%;
        height: 15%;
        .kids-btn {
          text-decoration: none;
          color: $dark-blue;
          font-size: $large;
          border: 1px solid white;
          border-radius: 8px;
          padding: 16px 26px;
          background-color: #fff;
          &:hover {
            background-color: $dark-blue;
            color: $white;
            border-color: $dark-blue;
          }
        }
      }
    }
    .third-right-container {
      width: 50%;
      height: 100%;
      background-image: url(../../../../public/imgs/kinder.jpg);
      background-size: cover;
      background-position: left;
      transition: all 0.5s ease;
      &:hover {
        transform: scale(1.1);
        background-position: right;
      }
    }
  }
  .leistungen-footer-container {
    width: 100%;
    height: calc(100vh - 90px);
    // margin-top: 94px;
    scroll-snap-align: end;

    .last-section-container {
      width: 100%;
      height: 100%;
      background-color: $dark-blue;
      display: flex;
      scroll-snap-align: start;
    }
  }
}

// ################################ MOBILE DESIGN ##############################################

@media screen and (max-width: 480px) {
  .leistungen-main-container {
    margin-bottom: 70px;
    width: 100vw;
    height: 100%;
    .first-container {
      height: calc(100vh - 160px);
    }
    .secound-container {
      overflow: hidden;
      width: 100%;
      height: calc(100vh - 160px);
      color: white;
      display: flex;
      flex-direction: column;

      .secound-left-container {
        width: 100%;
        height: 50%;
        background-position: center;
        &:hover {
          background-position: center;
          transform: scale(1);
        }
      }
      .secound-right-container {
        width: 100%;
        height: 50%;
        .adults-title-container {
          height: 30%;
          display: flex;
          align-items: center;
          justify-content: center;
          // background-color: red;
          .adults-title {
            font-size: $xx-large;
            font-weight: 900;
            font-family: "Merri";
            letter-spacing: 2px;
          }
        }
        .adults-btn-container {
          // background-color: green;
          width: 100%;
          // height: 30%;
          display: flex;
          align-items: center;
          justify-content: center;
          .adults-btn {
            font-size: $small;
            padding: 14px 20px;
            &:hover {
              background-color: $light-blue;
              color: $white;
              border-color: $light-blue;
            }
          }
        }
      }
    }
    .third-container {
      width: 100%;
      height: calc(100vh - 160px);
      display: flex;
      flex-direction: column-reverse;

      .third-left-container {
        width: 100%;
        height: 50%;
        .kids-title-container {
          height: 30%;
          display: flex;
          align-items: center;
          justify-content: center;
          .kids-title {
            font-size: $xx-large;
            font-weight: 900;
            font-family: "Merri";
            letter-spacing: 2px;
          }
        }
        .kids-btn-container {
          width: 95%;
          // height: 30%;
          display: flex;
          align-items: center;
          justify-content: center;
          .kids-btn {
            font-size: $small;
            padding: 10px 15px;
          }
        }
      }
      .third-right-container {
        width: 100%;
        height: 50%;
        background-image: url(../../../../public/imgs/kinder.jpg);
        background-size: cover;
        background-position: left;
        transition: all 0.5s ease;
        &:hover {
          transform: scale(1);
          background-position: left;
        }
      }
    }
    .leistungen-footer-container {
      width: 100vw;
      height: calc(100vh - 160px);

      .last-section-container {
        width: 100vw;
        height: 100%;
        display: flex;
        scroll-snap-align: start;
      }
    }
  }
}

